fix: white space when in mobile, add navigation swipper, background auth page, hero image tentang kami page, hover gallery, wisata card layout

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 .swiper-button-next,
 .swiper-button-prev {
     background-color: #F4D548;
-    padding: 20px;
+    padding: 15px;
     color: #1E1E1E !important;
     fill: #1E1E1E !important;
     stroke: #1E1E1E !important;
